feat: Add admin.merbsconnect.com to CORS allowed origins