@@ -36,111 +36,131 @@ import java.util.List;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final CustomUserDetailsService userDetailsService;
-    private final JwtAuthenticationEntryPoint unauthorizedHandler;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+        private final CustomUserDetailsService userDetailsService;
+        private final JwtAuthenticationEntryPoint unauthorizedHandler;
+        private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+        @Bean
+        public PasswordEncoder passwordEncoder() {
+                return new BCryptPasswordEncoder();
+        }
 
-    @Bean
-    public AuthenticationManager authenticationManager() {
-        return new ProviderManager(authenticationProvider());
-    }
+        @Bean
+        public AuthenticationManager authenticationManager() {
+                return new ProviderManager(authenticationProvider());
+        }
 
-    @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
+        @Bean
+        public DaoAuthenticationProvider authenticationProvider() {
+                DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(userDetailsService);
+                authProvider.setPasswordEncoder(passwordEncoder());
+                return authProvider;
+        }
 
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        return http
-                .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> {
-                    auth.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll();
+        @Bean
+        public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+                return http
+                                .csrf(AbstractHttpConfigurer::disable)
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
+                                .sessionManagement(session -> session
+                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                .authorizeHttpRequests(auth -> {
+                                        auth.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll();
 
-                    // Public auth endpoints
-                    auth.requestMatchers("/api/v1/auth/**").permitAll();
+                                        // Public auth endpoints
+                                        auth.requestMatchers("/api/v1/auth/**").permitAll();
 
-                    // Public event viewing endpoints (GET requests) - anyone can view events
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/**").permitAll();
+                                        // Public event viewing endpoints (GET requests) - anyone can view events
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events").permitAll();
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/**").permitAll();
 
-                    // Public event registration - anyone can register (includes v2 with QR code)
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/register").permitAll();
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/register-v2").permitAll();
+                                        // Public event registration - anyone can register (includes v2 with QR code)
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/register").permitAll();
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/register-v2")
+                                                        .permitAll();
 
-                    // Public: View reviews, articles, gallery
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/reviews").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/articles").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/articles/**").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/gallery").permitAll();
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/registration").permitAll();
+                                        // Public: View reviews, articles, gallery
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/reviews").permitAll();
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/articles").permitAll();
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/articles/**")
+                                                        .permitAll();
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/gallery").permitAll();
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/registration")
+                                                        .permitAll();
 
-                    // Admin-only event management operations (includes SUPER_ADMIN and
-                    // SUPPORT_ADMIN)
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events").hasAnyRole("ADMIN", "SUPER_ADMIN",
-                            "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/**").hasAnyRole("ADMIN", "SUPER_ADMIN",
-                            "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/**").hasAnyRole("ADMIN", "SUPER_ADMIN");
+                                        // Admin-only event management operations (includes SUPER_ADMIN and
+                                        // SUPPORT_ADMIN)
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events").hasAnyRole("ADMIN",
+                                                        "SUPER_ADMIN",
+                                                        "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/**").hasAnyRole("ADMIN",
+                                                        "SUPER_ADMIN",
+                                                        "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/**").hasAnyRole("ADMIN",
+                                                        "SUPER_ADMIN");
 
-                    // Admin-only: Articles, Gallery upload, Check-in
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/articles").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/*/articles/*").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/*/articles/*").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/gallery").hasAnyRole("ADMIN", "SUPER_ADMIN",
-                            "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/*/gallery/*").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/*/gallery/drive-link").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/check-in").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
-                    auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/check-in/stats").hasAnyRole("ADMIN",
-                            "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        // Admin-only: Articles, Gallery upload, Check-in
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/articles").hasAnyRole(
+                                                        "ADMIN",
+                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/*/articles/*").hasAnyRole(
+                                                        "ADMIN",
+                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/*/articles/*")
+                                                        .hasAnyRole("ADMIN",
+                                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/gallery").hasAnyRole(
+                                                        "ADMIN", "SUPER_ADMIN",
+                                                        "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.DELETE, "/api/v1/events/*/gallery/*")
+                                                        .hasAnyRole("ADMIN",
+                                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.PUT, "/api/v1/events/*/gallery/drive-link")
+                                                        .hasAnyRole("ADMIN",
+                                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.POST, "/api/v1/events/*/check-in").hasAnyRole(
+                                                        "ADMIN",
+                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
+                                        auth.requestMatchers(HttpMethod.GET, "/api/v1/events/*/check-in/stats")
+                                                        .hasAnyRole("ADMIN",
+                                                                        "SUPER_ADMIN", "SUPPORT_ADMIN");
 
-                    // Other public endpoints (swagger, static files, etc.)
-                    EndpointUtils.PUBLIC_ENDPOINTS.forEach(endpoint -> auth.requestMatchers(endpoint).permitAll());
+                                        // Other public endpoints (swagger, static files, etc.)
+                                        EndpointUtils.PUBLIC_ENDPOINTS.forEach(
+                                                        endpoint -> auth.requestMatchers(endpoint).permitAll());
 
-                    // Protected endpoints with specific role requirements
-                    EndpointUtils.PROTECTED_ENDPOINTS.forEach(endpoint -> auth
-                            .requestMatchers(endpoint.getMethod(), endpoint.getPath()).hasRole("ADMIN"));
+                                        // Protected endpoints with specific role requirements
+                                        EndpointUtils.PROTECTED_ENDPOINTS.forEach(endpoint -> auth
+                                                        .requestMatchers(endpoint.getMethod(), endpoint.getPath())
+                                                        .hasRole("ADMIN"));
 
-                    // All other requests require authentication
-                    auth.anyRequest().authenticated();
-                })
-                .authenticationProvider(authenticationProvider())
-                .authenticationManager(authenticationManager())
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-                .build();
-    }
+                                        // All other requests require authentication
+                                        auth.anyRequest().authenticated();
+                                })
+                                .authenticationProvider(authenticationProvider())
+                                .authenticationManager(authenticationManager())
+                                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+                                .build();
+        }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration
-                .setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:8080", "http://localhost:5174",
-                        "http://localhost:5175", "https://merbsconnect.com", "https://www.merbsconnect.com"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Auth-Token"));
-        configuration.setMaxAge(3600L); // 1 hour
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration
+                                .setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:8080",
+                                                "http://localhost:5174",
+                                                "http://localhost:5175", "https://merbsconnect.com",
+                                                "https://www.merbsconnect.com",
+                                                "https://admin.merbsconnect.com"));
+                configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(List.of("*"));
+                configuration.setAllowCredentials(true);
+                configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Auth-Token"));
+                configuration.setMaxAge(3600L); // 1 hour
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", configuration);
+                return source;
+        }
 
 }
